# playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  playground.code-workspace  run.sh
projects/raymarchsphere/: CMakeLists.txt  common.h  main.cpp  raymarch.cpp  raymarch.h
projects/raymarchsphere/data/: base.cl  raymarch.cl  raymarch.frag
projects/raytraceweekone/: CMakeLists.txt  camera.cpp  camera.h  color.cpp  common.h  film.cpp  isect.cpp  isect.h  main.cpp  material.cpp  primitive.cpp  tracer.cpp
projects/raytraceweektwo/: CMakeLists.txt  camera.cpp  camera.h  color.h  common.h  film.h  main.cpp  material.h  primitive.h  ray.h  sampler.cpp  sampler.h  tracer.cpp  tracer.h
projects/raytraceweektwo/data/: tracer.frag  tracer.vert
