cmake_minimum_required(VERSION 3.2)

# Disable in-source builds to prevent source tree corruption.
if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
  message(FATAL_ERROR "FATAL: In-source builds are not allowed. You should create a separate directory for build files and delete CMakeCache.txt.")
endif()

# Set project options
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build." FORCE)
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
        "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
endif(NOT CMAKE_BUILD_TYPE)

add_definitions('-DNS_FORMAT_ARGUMENT\(A\)=' -D_Nullable_result=_Nullable)
#if(CMAKE_BUILD_TYPE MATCHES "Debug")
#    add_definitions(-DDEBUG)
#endif()

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

project(playground)

set(CORE_ROOT_DIR ${CMAKE_SOURCE_DIR}/core)

add_subdirectory(core/external)
add_subdirectory(core/core)
add_subdirectory(projects/raymarchsphere)
add_subdirectory(projects/raytraceweekone)
add_subdirectory(projects/raytraceweektwo)
